frontend_angular/src/app/app.component.scss
.snapshot {
  text-align: center;
  img {
    max-width: 800px;
    max-height: 800px;
    width: 500px;
  }
}

.image-container{
  width: 90vw;
  padding: 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;

}

.items-center{
  display: flex;
  justify-content: center;
}

.btn-primary{
  height: 30px;
}


.translate{
  text-align: right;
  margin-right: 5%;
}

.modal-background {
  position: fixed;
  top: 0;
  right: 10px;
  width: 10%;
  height: 10%;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.healthy-plant{
  padding: 10px;
  width: 90%;
  margin: 10px auto;


}

